# cerradura-convexa

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: convex_hull.h
src/: CMakeLists.txt  convexHullGraham.h  convexHullJarvis.h
test/: CMakeLists.txt  reg_poly_gen.cpp  testConvexHull.cpp  testRegPolyFixture.cpp
test/timePerformance/: CMakeLists.txt  plotter.py  testPerformanceCH.cpp  timeutil.cpp
test/timePerformance/results/: graham_scan_increasing_points.csv  graham_time_43_vertices.csv  graham_time_vertices.csv  jarvis_time_43_vertices.csv  jarvis_time_increasing_points.csv  jarvis_time_vertices.csv
